...
                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                <items>
                                    <barButtonItem style="plain" id="dxq-f4-2T8">
                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="FOm-Z2-EhH">
                                            <rect key="frame" x="16" y="7" width="57" height="30"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <state key="normal" title="Settings"/>
                                            <connections>
                                                <action selector="settingsButtonHandler:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rfW-1z-voO"/>
                                            </connections>
                                        </button>
                                    </barButtonItem>
                                </items>
...
                                                <connections>
                                                    <action selector="segmentedControlValueChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="G2o-TW-gzX"/>
                                                </connections>
                                            </segmentedControl>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHF-jS-3EQ">
                                                <rect key="frame" x="328" y="152" width="39" height="30"/>
                                                <state key="normal" title="Close"/>
                                                <connections>
                                                    <action selector="settingsButtonDismissHandler:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rGw-ND-Hw0"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="1" id="oY3-Cg-NJ3"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dvZ-xa-hyD">
                                <rect key="frame" x="167" y="617" width="41" height="30"/>
                                <state key="normal" title="Home"/>
                                <connections>
                                    <action selector="homeButtonHandler:" destination="m3t-Nq-GoD" eventType="touchUpInside" id="R9e-Mj-fFa"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SyA-RD-Vka">
                                <rect key="frame" x="16" y="32" width="36" height="21"/>
...
