...
    
    - Returns: a String for the title of a certain security code
    */
    public func securityCodeTitle() -> String {
        switch self {
        case .visa:
            return "CVV2"
        case .masterCard:
            return "CVC2"
        case .amex:
            return "CID"
        case .chinaUnionPay:
            return "CVN2"
        case .discover:
            return "CID"
        case .jcb:
            return "CAV2"
...
