...
    
    // MARK: View Setup
    
    open func setupView() {
        self.translatesAutoresizingMaskIntoConstraints = false
        self.backgroundColor = self.theme.getButtonColor()
        self.setTitle("Pay", for: UIControl.State())
        self.setTitleColor(self.theme.getButtonTitleColor(), for: UIControl.State())
        self.titleLabel?.font = UIFont.boldSystemFont(ofSize: 22)
    }
}

